--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Star Wars - Express</title>
+  <title>Friend Finder Survey</title>
   <!-- Latest compiled and minified CSS & JS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -16,40 +16,17 @@
 
   <div class="container">
     <div class="jumbotron">
-      <h1>Star Wars Express</h1>
-      <h3>The greatest resource in the galaxy for Star Wars statistics!</h3>
+      <h1>Friend Finder Survey</h1>
+      <h3>Take a survey and find you best friend match!</h3>
       <hr>
-      <button class="btn btn-danger btn-lg"><span class="fa fa-plus"></span> Add New Character</button>
+      <button class="btn btn-danger btn-lg"><span class="fa fa-plus"></span> Take The Survey!</button>
     </div>
-    <div class="row">
-
-      <div class="col-12">
-
-        <div class="card mb-4">
-          <div class="card-header">
-            <h3><strong>Character Search</strong></h3>
-          </div>
-          <div class="card-body">
-            <input type="text" id="character-search" class="form-control">
-            <br>
-            <div class="text-right">
-              <button type="submit" class="btn btn-primary btn-md" id="search-btn"><span class="fa fa-search"></span> Search
-                Your Feelings. You know it to be true.</button>
-            </div>
-          </div>
-        </div>
-
         <div class="card">
           <div class="card-header">
             <h3><strong>Character Statistics</strong></h3>
           </div>
           <div class="card-body">
-            <h2 id="name">Yoda</h2>
-            <div id="stats">
-              <h3><strong>Role:</strong> <span id="role">Jedi Master</span></h3>
-              <h3><strong>Age:</strong> <span id="age">900</span></h3>
-              <h3><strong>Force Points:</strong> <span id="force-points">2000</span></h3>
-            </div>
+            <div id="survey"></div>
           </div>
         </div>
       </div>
