--- a/app/public/home.html
+++ b/app/public/home.html
@@ -19,29 +19,11 @@
       <h1>Friend Finder</h1>
       <h3>Take a survey and find you best friend match!</h3>
       <hr>
-      <button class="btn btn-danger btn-lg"><span class="fa fa-plus"></span> Add New Character</button>
-    </div>
-    <div class="row">
-
-      <div class="col-12">
-
-        <div class="card mb-4">
-          <div class="card-header">
-            <h3><strong>Friend Search</strong></h3>
-          </div>
-          <div class="card-body">
-            <input type="text" id="character-search" class="form-control">
-            <br>
-            <div class="text-right">
-              <button type="submit" class="btn btn-primary btn-md" id="search-btn"><span class="fa fa-search"></span> Search
-                Your Feelings. You know it to be true.</button>
-            </div>
-          </div>
-        </div>
-      </div>
+      <button class="submit btn btn-success btn-lg"><span class="fa fa-plus"></span> Find your New Best Friend!</button>
     </div>
   </div>
-
+  <script src= "../../server.js" ></script>
+<script src= "../routing/htmlRouts.js" ></script>
 </body>
 
 </html>
