--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -19,14 +19,24 @@
       <h1>Friend Finder Survey</h1>
       <h3>Take a survey and find you best friend match!</h3>
       <hr>
-      <button class="btn btn-danger btn-lg"><span class="fa fa-plus"></span> Take The Survey!</button>
     </div>
         <div class="card">
           <div class="card-header">
-            <h3><strong>Character Statistics</strong></h3>
+            <h3><strong>Friend Survey</strong></h3>
           </div>
           <div class="card-body">
-            <div id="survey"></div>
+            <div id="survey">
+           <p><h4>Q1.)</h4></p>
+           <p><h4>Q2.)</h4></p>
+           <p><h4>Q3.)</h4></p>
+           <p><h4>Q4.)</h4></p>
+           <p><h4>Q5.)</h4></p>
+           <p><h4>Q6.)</h4></p>
+           <p><h4>Q7.)</h4></p>
+           <p><h4>Q8.)</h4></p>
+           <p><h4>Q9.)</h4></p>
+           <p><h4>Q10.)</h4></p>
+            </div>
           </div>
         </div>
       </div>
