--- a/app/public/home.html
+++ b/app/public/home.html
@@ -19,11 +19,10 @@
       <h1>Friend Finder</h1>
       <h3>Take a survey and find you best friend match!</h3>
       <hr>
-      <button class="submit btn btn-success btn-lg"><span class="fa fa-plus"></span> Find your New Best Friend!</button>
+      <a href="/survey"><button id='startSurvey' class="submit btn btn-success btn-lg"><span class="fa fa-plus"></span> Find your New Best Friend!</button></a>
     </div>
   </div>
-  <script src= "../../server.js" ></script>
-<script src= "../routing/htmlRouts.js" ></script>
+<script src= "../public/assets/js/logic.js" ></script>
 </body>
 
 </html>
