--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -25,24 +25,126 @@
             <h3><strong>Friend Survey</strong></h3>
           </div>
           <div class="card-body">
-            <div id="survey">
-           <p><h4>Q1.)</h4></p>
-           <p><h4>Q2.)</h4></p>
-           <p><h4>Q3.)</h4></p>
-           <p><h4>Q4.)</h4></p>
-           <p><h4>Q5.)</h4></p>
-           <p><h4>Q6.)</h4></p>
-           <p><h4>Q7.)</h4></p>
-           <p><h4>Q8.)</h4></p>
-           <p><h4>Q9.)</h4></p>
-           <p><h4>Q10.)</h4></p>
-            </div>
-          </div>
+            <form>
+              <div id="survey">
+                <div class="form-group">
+                    <label for="friend_profile_name">Your Name </label>
+                    <input type='text'class="form-control" id='friend_profile_name' placeholder="Your Name for friend profile">  
+                    <label for="image_url">Image URL</label>
+                    <input type="url" class="form-control" id="image_url" placeholder="Image URL for friend profile">
+                  
+                    </div>
+                    <div id="survey-questions">
+                      <div id='q1' class="form-group">
+                        <label for="q1choice">Q1 question</label>
+                        <select class="form-control" id="q1choice">
+                          <option val = 1>Strongly Dissagree (1)</option>
+                          <option val = 2>Dissagree (2)</option>
+                          <option val = 3>Neither Agree or Disagree (3)</option>
+                          <option val = 4>Agree (4)</option>
+                          <option val = 5>Strongly Agree (5)</option>
+                        </select>
+                      </div>
+                      <div id='q2' class="form-group">
+                        <label for="q2choice">Q2 question</label>
+                        <select class="form-control" id="q2choice">
+                          <option val = 1>Strongly Dissagree (1)</option>
+                          <option val = 2>Dissagree (2)</option>
+                          <option val = 3>Neither Agree or Disagree (3)</option>
+                          <option val = 4>Agree (4)</option>
+                          <option val = 5>Strongly Agree (5)</option>
+                        </select>
+                      </div>
+                      <div id='q3' class="form-group">
+                        <label for="q3choice">Q3 question</label>
+                        <select class="form-control" id="q3choice">
+                          <option val = 1>Strongly Dissagree (1)</option>
+                          <option val = 2>Dissagree (2)</option>
+                          <option val = 3>Neither Agree or Disagree (3)</option>
+                          <option val = 4>Agree (4)</option>
+                          <option val = 5>Strongly Agree (5)</option>
+                        </select>
+                      </div>
+                      <div id='q4' class="form-group">
+                        <label for="q4choice">Q4 question</label>
+                        <select class="form-control" id="q4choice">
+                          <option val = 1>Strongly Dissagree (1)</option>
+                          <option val = 2>Dissagree (2)</option>
+                          <option val = 3>Neither Agree or Disagree (3)</option>
+                          <option val = 4>Agree (4)</option>
+                          <option val = 5>Strongly Agree (5)</option>
+                        </select>
+                      </div>
+                      <div id='q5' class="form-group">
+                        <label for="q5choice">Q5 question</label>
+                        <select class="form-control" id="q5choice">
+                          <option val = 1>Strongly Dissagree (1)</option>
+                          <option val = 2>Dissagree (2)</option>
+                          <option val = 3>Neither Agree or Disagree (3)</option>
+                          <option val = 4>Agree (4)</option>
+                          <option val = 5>Strongly Agree (5)</option>
+                        </select>
+                      </div>
+                      <div id='q6' class="form-group">
+                        <label for="q6choice">Q6 question</label>
+                        <select class="form-control" id="q6choice">
+                          <option val = 1>Strongly Dissagree (1)</option>
+                          <option val = 2>Dissagree (2)</option>
+                          <option val = 3>Neither Agree or Disagree (3)</option>
+                          <option val = 4>Agree (4)</option>
+                          <option val = 5>Strongly Agree (5)</option>
+                        </select>
+                      </div>
+                      <div id='q7' class="form-group">
+                          <label for="q7choice">Q7 question</label>
+                          <select class="form-control" id="q7choice">
+                            <option val = 1>Strongly Dissagree (1)</option>
+                            <option val = 2>Dissagree (2)</option>
+                            <option val = 3>Neither Agree or Disagree (3)</option>
+                            <option val = 4>Agree (4)</option>
+                            <option val = 5>Strongly Agree (5)</option>
+                          </select>
+                        </div>
+                        <div id='q8' class="form-group">
+                          <label for="q8choice">Q8 question</label>
+                          <select class="form-control" id="q8choice">
+                            <option val = 1>Strongly Dissagree (1)</option>
+                            <option val = 2>Dissagree (2)</option>
+                            <option val = 3>Neither Agree or Disagree (3)</option>
+                            <option val = 4>Agree (4)</option>
+                            <option val = 5>Strongly Agree (5)</option>
+                          </select>
+                        </div>
+                        <div id='q9' class="form-group">
+                            <label for="q9choice">Q9 question</label>
+                            <select class="form-control" id="q9choice">
+                              <option val = 1>Strongly Dissagree (1)</option>
+                              <option val = 2>Dissagree (2)</option>
+                              <option val = 3>Neither Agree or Disagree (3)</option>
+                              <option val = 4>Agree (4)</option>
+                              <option val = 5>Strongly Agree (5)</option>
+                            </select>
+                          </div>
+                          <div id='q10' class="form-group">
+                            <label for="q10choice">Q10 question</label>
+                            <select class="form-control" id="q10choice">
+                              <option val = 1>Strongly Dissagree (1)</option>
+                              <option val = 2>Dissagree (2)</option>
+                              <option val = 3>Neither Agree or Disagree (3)</option>
+                              <option val = 4>Agree (4)</option>
+                              <option val = 5>Strongly Agree (5)</option>
+                            </select>
+                          </div>
+                          <button id='addSurveyEntry' class="submit btn btn-success btn-lg"><span class="fa fa-plus"></span> Find your New Best Friend!</button>
+                    </div>
+              </div>
+          </div>  
         </div>
       </div>
     </div>
   </div>
 
+  <script src= "../public/assets/js/logic.js"></script>
   
 </body>
 
