--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+
 <html lang="en">
 
 <head>
@@ -32,110 +32,109 @@
                     <input type='text'class="form-control" id='friend_profile_name' placeholder="Your Name for friend profile">  
                     <label for="image_url">Image URL</label>
                     <input type="url" class="form-control" id="image_url" placeholder="Image URL for friend profile">
-                  
                     </div>
                     <div id="survey-questions">
                       <div id='q1' class="form-group">
-                        <label for="q1choice">Q1 question</label>
+                        <label for="q1choice">Q1.) You enjoy silently watching movies rather than talk through movies</label>
                         <select class="form-control" id="q1choice">
-                          <option val = 1>Strongly Dissagree (1)</option>
-                          <option val = 2>Dissagree (2)</option>
+                          <option val = 1>Strongly Disagree (1)</option>
+                          <option val = 2>Disagree (2)</option>
                           <option val = 3>Neither Agree or Disagree (3)</option>
                           <option val = 4>Agree (4)</option>
                           <option val = 5>Strongly Agree (5)</option>
                         </select>
                       </div>
                       <div id='q2' class="form-group">
-                        <label for="q2choice">Q2 question</label>
+                        <label for="q2choice">Q2.) You are a clean and organized person</label>
                         <select class="form-control" id="q2choice">
-                          <option val = 1>Strongly Dissagree (1)</option>
-                          <option val = 2>Dissagree (2)</option>
+                          <option val = 1>Strongly Disagree (1)</option>
+                          <option val = 2>Disagree (2)</option>
                           <option val = 3>Neither Agree or Disagree (3)</option>
                           <option val = 4>Agree (4)</option>
                           <option val = 5>Strongly Agree (5)</option>
                         </select>
                       </div>
                       <div id='q3' class="form-group">
-                        <label for="q3choice">Q3 question</label>
+                        <label for="q3choice">Q3.) You love trying new foods even if they seem weird to you</label>
                         <select class="form-control" id="q3choice">
-                          <option val = 1>Strongly Dissagree (1)</option>
-                          <option val = 2>Dissagree (2)</option>
+                          <option val = 1>Strongly Disagree (1)</option>
+                          <option val = 2>Disagree (2)</option>
                           <option val = 3>Neither Agree or Disagree (3)</option>
                           <option val = 4>Agree (4)</option>
                           <option val = 5>Strongly Agree (5)</option>
                         </select>
                       </div>
                       <div id='q4' class="form-group">
-                        <label for="q4choice">Q4 question</label>
+                        <label for="q4choice">Q4.) You enjoy going out with friends</label>
                         <select class="form-control" id="q4choice">
-                          <option val = 1>Strongly Dissagree (1)</option>
-                          <option val = 2>Dissagree (2)</option>
+                          <option val = 1>Strongly Disagree (1)</option>
+                          <option val = 2>Disagree (2)</option>
                           <option val = 3>Neither Agree or Disagree (3)</option>
                           <option val = 4>Agree (4)</option>
                           <option val = 5>Strongly Agree (5)</option>
                         </select>
                       </div>
                       <div id='q5' class="form-group">
-                        <label for="q5choice">Q5 question</label>
+                        <label for="q5choice">Q5.) Best things are shared with friends.</label>
                         <select class="form-control" id="q5choice">
-                          <option val = 1>Strongly Dissagree (1)</option>
-                          <option val = 2>Dissagree (2)</option>
+                          <option val = 1>Strongly Disagree (1)</option>
+                          <option val = 2>Disagree (2)</option>
                           <option val = 3>Neither Agree or Disagree (3)</option>
                           <option val = 4>Agree (4)</option>
                           <option val = 5>Strongly Agree (5)</option>
                         </select>
                       </div>
                       <div id='q6' class="form-group">
-                        <label for="q6choice">Q6 question</label>
+                        <label for="q6choice">Q6.) You are considered a loyal and trustworthy person.</label>
                         <select class="form-control" id="q6choice">
-                          <option val = 1>Strongly Dissagree (1)</option>
-                          <option val = 2>Dissagree (2)</option>
+                          <option val = 1>Strongly Disagree (1)</option>
+                          <option val = 2>Disagree (2)</option>
                           <option val = 3>Neither Agree or Disagree (3)</option>
                           <option val = 4>Agree (4)</option>
                           <option val = 5>Strongly Agree (5)</option>
                         </select>
                       </div>
                       <div id='q7' class="form-group">
-                          <label for="q7choice">Q7 question</label>
+                          <label for="q7choice">Q7.) A good friend has your back especially if you are in trouble</label>
                           <select class="form-control" id="q7choice">
-                            <option val = 1>Strongly Dissagree (1)</option>
-                            <option val = 2>Dissagree (2)</option>
+                            <option val = 1>Strongly Disagree (1)</option>
+                            <option val = 2>Disagree (2)</option>
                             <option val = 3>Neither Agree or Disagree (3)</option>
                             <option val = 4>Agree (4)</option>
                             <option val = 5>Strongly Agree (5)</option>
                           </select>
                         </div>
                         <div id='q8' class="form-group">
-                          <label for="q8choice">Q8 question</label>
+                          <label for="q8choice">Q8.) A good friend definitely has your back especially if there is trouble</label>
                           <select class="form-control" id="q8choice">
-                            <option val = 1>Strongly Dissagree (1)</option>
-                            <option val = 2>Dissagree (2)</option>
+                            <option val = 1>Strongly Disagree (1)</option>
+                            <option val = 2>Disagree (2)</option>
                             <option val = 3>Neither Agree or Disagree (3)</option>
                             <option val = 4>Agree (4)</option>
                             <option val = 5>Strongly Agree (5)</option>
                           </select>
                         </div>
                         <div id='q9' class="form-group">
-                            <label for="q9choice">Q9 question</label>
+                            <label for="q9choice">Q9.) Best freinds are found through surveys</label>
                             <select class="form-control" id="q9choice">
-                              <option val = 1>Strongly Dissagree (1)</option>
-                              <option val = 2>Dissagree (2)</option>
+                              <option val = 1>Strongly Disagree (1)</option>
+                              <option val = 2>Disagree (2)</option>
                               <option val = 3>Neither Agree or Disagree (3)</option>
                               <option val = 4>Agree (4)</option>
                               <option val = 5>Strongly Agree (5)</option>
                             </select>
                           </div>
                           <div id='q10' class="form-group">
-                            <label for="q10choice">Q10 question</label>
+                            <label for="q10choice">Q10.) Surveys work best when you tell the truth</label>
                             <select class="form-control" id="q10choice">
-                              <option val = 1>Strongly Dissagree (1)</option>
-                              <option val = 2>Dissagree (2)</option>
+                              <option val = 1>Strongly Disagree (1)</option>
+                              <option val = 2>Disagree (2)</option>
                               <option val = 3>Neither Agree or Disagree (3)</option>
                               <option val = 4>Agree (4)</option>
                               <option val = 5>Strongly Agree (5)</option>
                             </select>
                           </div>
-                          <button id='addSurveyEntry' class="submit btn btn-success btn-lg"><span class="fa fa-plus"></span> Find your New Best Friend!</button>
+                          <a id='addSurveyEntry' class="btn btn-success btn-lg"><span class="fa fa-plus"></span> Find your New Best Friend!</a>
                     </div>
               </div>
           </div>  
