--- a/app/public/home.html
+++ b/app/public/home.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 
 <html lang="en">
 
@@ -22,7 +23,7 @@
       <a href="/survey"><button id='startSurvey' class="submit btn btn-success btn-lg"><span class="fa fa-plus"></span> Find your New Best Friend!</button></a>
     </div>
   </div>
-<script src= "../public/assets/js/logic.js" ></script>
+  <!-- <script src= "./assets/js/logic.js"></script> -->
 </body>
 
 </html>
